louisa fixed the blinky hover on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -46,14 +46,14 @@ body {
 #social-nav ul li {
 	display: inline-block;
 	list-style: none;
-	padding: 0 20px;
+	margin: 0 20px;
 }
 
 .icon-color {
 	fill: #FFF;
 }
 
-.icon-color:hover {
+li:hover .icon-color {
 	fill: #000;
 }
 
@@ -138,7 +138,10 @@ footer h4 {
 
 @media (max-width: 888px) {
 	.dogs {
+		display: block;
 		width: 100%;
+		max-width: 600px;
+		margin: 0 auto;
 		padding: 10px 20px;
 	}
 }
